# ckanext-knowtest

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
ckanext/knowtest/: plugin.py  views.py
ckanext/knowtest/assets/: script.js  webassets.yml
ckanext/knowtest/logic/: validators.py
ckanext/knowtest/public/: custom.css  webassets.yml
ckanext/knowtest/schemas/: journal_article.yaml  kb_resource.yaml  presets.yaml  web_reference.yaml
ckanext/knowtest/templates/: header.html
