# This file should only contain setuptools related configuration to build the
# extension (i.e. arguments to setup() in setup.py). Add any other project
# information should go to pyproject.toml instead.
#
# TODO: migrate Babel options to pyproject.toml when it's better supported


[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan
#ckan.plugins =
#                 knowtest = ckanext.knowtest.plugin:KnowTestPlugin

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/knowtest/i18n/ckanext-knowtest.pot
width = 80

[init_catalog]
domain = ckanext-knowtest
input_file = ckanext/knowtest/i18n/ckanext-knowtest.pot
output_dir = ckanext/knowtest/i18n

[update_catalog]
domain = ckanext-knowtest
input_file = ckanext/knowtest/i18n/ckanext-knowtest.pot
output_dir = ckanext/knowtest/i18n
previous = true

[compile_catalog]
domain = ckanext-knowtest
directory = ckanext/knowtest/i18n
statistics = true
